--- a/match.html
+++ b/match.html
@@ -8,23 +8,24 @@
     <title>Match Game</title>
 </head>
 <body>
+    <h1>Super Cool Awesome Fun Inspiring Card Matching Game</h1>
     <div class = "grid">
-        <div id = "card"><img src="CARDBACK.png" alt="click to flip"/></div>
-        <div id = "card"><img src="CARDBACK.png" alt="click to flip"/></div>
-        <div id = "card"><img src="CARDBACK.png" alt="click to flip"/></div>
-        <div id = "card"><img src="CARDBACK.png" alt="click to flip"/></div>
-        <div id = "card"><img src="CARDBACK.png" alt="click to flip"/></div>
-        <div id = "card"><img src="CARDBACK.png" alt="click to flip"/></div>
-        <div id = "card"><img src="CARDBACK.png" alt="click to flip"/></div>
-        <div id = "card"><img src="CARDBACK.png" alt="click to flip"/></div>
-        <div id = "card"><img src="CARDBACK.png" alt="click to flip"/></div>
-        <div id = "card"><img src="CARDBACK.png" alt="click to flip"/></div>
-        <div id = "card"><img src="CARDBACK.png" alt="click to flip"/></div>
-        <div id = "card"><img src="CARDBACK.png" alt="click to flip"/></div>
-        <div id = "card"><img src="CARDBACK.png" alt="click to flip"/></div>
-        <div id = "card"><img src="CARDBACK.png" alt="click to flip"/></div>
-        <div id = "card"><img src="CARDBACK.png" alt="click to flip"/></div>
-        <div id = "card"><img src="CARDBACK.png" alt="click to flip"/></div>
+        <div id = "archer1"><img src="CARDBACK.png" alt="click to flip"/></div>
+        <div id = "stopsign1"><img src="CARDBACK.png" alt="click to flip"/></div>
+        <div id = "troll1"><img src="CARDBACK.png" alt="click to flip"/></div>
+        <div id = "wizard1"><img src="CARDBACK.png" alt="click to flip"/></div>
+        <div id = "stopsign2"><img src="CARDBACK.png" alt="click to flip"/></div>
+        <div id = "knight1"><img src="CARDBACK.png" alt="click to flip"/></div>
+        <div id = "fakecard1"><img src="CARDBACK.png" alt="click to flip"/></div>
+        <div id = "troll2"><img src="CARDBACK.png" alt="click to flip"/></div>
+        <div id = "king1"><img src="CARDBACK.png" alt="click to flip"/></div>
+        <div id = "archer2"><img src="CARDBACK.png" alt="click to flip"/></div>
+        <div id = "knight2"><img src="CARDBACK.png" alt="click to flip"/></div>
+        <div id = "healer1"><img src="CARDBACK.png" alt="click to flip"/></div>
+        <div id = "wizard2"><img src="CARDBACK.png" alt="click to flip"/></div>
+        <div id = "healer2"><img src="CARDBACK.png" alt="click to flip"/></div>
+        <div id = "fakecard2"><img src="CARDBACK.png" alt="click to flip"/></div>
+        <div id = "king2"><img src="CARDBACK.png" alt="click to flip"/></div>
     </div>
 </body>
 </html>
