--- a/match.html
+++ b/match.html
@@ -4,29 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href = "style.css">\
-    <script></script>
+    <link rel="stylesheet" href = "style.css">
+    <script src = "script.js" async></script>
     <title>Match Game</title>
 </head>
 <body onload = "initialize();">
     <h1>Super Cool Awesome Fun Inspiring Card Matching Game</h1>
     <div class = "grid">
-        <div id = "archer1"><img src="CARDBACK.png" alt="click to flip"/></div>
-        <div id = "stopsign1"><img src="CARDBACK.png" alt="click to flip"/></div>
-        <div id = "troll1"><img src="CARDBACK.png" alt="click to flip"/></div>
-        <div id = "wizard1"><img src="CARDBACK.png" alt="click to flip"/></div>
-        <div id = "stopsign"><img src="CARDBACK.png" alt="click to flip"/></div>
-        <div id = "knight1"><img src="CARDBACK.png" alt="click to flip"/></div>
-        <div id = "fakecard1"><img src="CARDBACK.png" alt="click to flip"/></div>
-        <div id = "troll"><img src="CARDBACK.png" alt="click to flip"/></div>
-        <div id = "king1"><img src="CARDBACK.png" alt="click to flip"/></div>
-        <div id = "archer"><img src="CARDBACK.png" alt="click to flip"/></div>
-        <div id = "knight"><img src="CARDBACK.png" alt="click to flip"/></div>
-        <div id = "healer1"><img src="CARDBACK.png" alt="click to flip"/></div>
-        <div id = "wizard"><img src="CARDBACK.png" alt="click to flip"/></div>
-        <div id = "healer"><img src="CARDBACK.png" alt="click to flip"/></div>
-        <div id = "fakecard"><img src="CARDBACK.png" alt="click to flip"/></div>
-        <div id = "king"><img src="CARDBACK.png" alt="click to flip"/></div>
+        <div><img id = "archer1" src="CARDBACK.png" alt="click to flip"/></div>
+        <div><img id = "stopsign1" src="CARDBACK.png" alt="click to flip"/></div>
+        <div><img id = "troll1" src="CARDBACK.png" alt="click to flip"/></div>
+        <div><img id = "wizard1" src="CARDBACK.png" alt="click to flip"/></div>
+        <div><img id = "stopsign" src="CARDBACK.png" alt="click to flip"/></div>
+        <div><img id = "knight1" src="CARDBACK.png" alt="click to flip"/></div>
+        <div><img id = "fakecard1" src="CARDBACK.png" alt="click to flip"/></div>
+        <div><img id = "troll" src="CARDBACK.png" alt="click to flip"/></div>
+        <div><img id = "king1" src="CARDBACK.png" alt="click to flip"/></div>
+        <div><img id = "archer" src="CARDBACK.png" alt="click to flip"/></div>
+        <div><img id = "knight" src="CARDBACK.png" alt="click to flip"/></div>
+        <div><img id = "healer1" src="CARDBACK.png" alt="click to flip"/></div>
+        <div><img id = "wizard" src="CARDBACK.png" alt="click to flip"/></div>
+        <div><img id = "healer"src="CARDBACK.png" alt="click to flip"/></div>
+        <div><img id = "fakecard" src="CARDBACK.png" alt="click to flip"/></div>
+        <div><img id = "king" src="CARDBACK.png" alt="click to flip"/></div>
     </div>
     <button onclick = "reset();">Reset</button>
     <p id = "score">Score: 0</p>
