--- a/match.html
+++ b/match.html
@@ -10,6 +10,7 @@
 </head>
 <body onload = "initialize();">
     <h1>Super Cool Awesome Fun Inspiring Card Matching Game</h1>
+    <h2>The matching game is simple. Your goal is to match pairs of cards up with each other until you have successfully matched all of the cards.<br/>Each click counts towards the score so try to get as low of a score as possible. You can always reset whenever you want.</h2>
     <div class = "grid">
         <div><img id = "archer1" src="CARDBACK.png" alt="click to flip"/></div>
         <div><img id = "stopsign1" src="CARDBACK.png" alt="click to flip"/></div>
